tests/baselines/reference/classExtendingQualifiedName.errors.txt
==== tests/cases/compiler/classExtendingQualifiedName.ts (1 errors) ====
    module M {
        class C {
        }
    
        class D extends M.C {
                        ~~~
!!! error TS2305: Module 'M' has no exported member 'C'.
        }
    }